a    Add ref to Nancy (unused).

--- a/Cukeness/Cukeness/Cukeness.csproj
+++ b/Cukeness/Cukeness/Cukeness.csproj
@@ -48,5 +48,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Nancy">
+      <Version>1.4.4</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
