F    Nancy might be actually running. It askes for elevated permissions when run. That's good? This is mostly copy and paste from the getting started, then fixing the crash bug that resulted.

--- a/Cukeness/Cukeness/Cukeness.csproj
+++ b/Cukeness/Cukeness/Cukeness.csproj
@@ -52,6 +52,9 @@
     <PackageReference Include="Nancy">
       <Version>1.4.4</Version>
     </PackageReference>
+    <PackageReference Include="Nancy.Hosting.Self">
+      <Version>1.4.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
