--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,4 +19,14 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - ./features:/work/features
+      - ./runner/configuration:/work/features/configuration
+    
+  step-server:
+    build:
+      context: ./step-server
+      dockerfile: ./Dockerfile
+    volumes:
+      - ./step-server:/step-server
+    command: "dotnet run --project /step-server/server/server.csproj"
+
     
