--- a/step-server/StepServer.Test/StepServer.Test.csproj
+++ b/step-server/StepServer.Test/StepServer.Test.csproj
@@ -7,12 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="5.4.2" />
+        <PackageReference Include="FluentAssertions.Json" Version="5.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
         <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
         <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Cukeness.Specs\Cukeness.Specs.csproj" />
       <ProjectReference Include="..\StepServer\StepServer.csproj" />
     </ItemGroup>
 
