--- a/step-server/StepServer/StepServer.csproj
+++ b/step-server/StepServer/StepServer.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Cukeness.Specs\Cukeness.Specs.csproj" />
+  </ItemGroup>
+
 </Project>
